--- a/Project/City.html
+++ b/Project/City.html
@@ -14,9 +14,12 @@
 
     <form id="cityForm">
         <h2>Select a City</h2>
-        <select id="citySelect" placeholder="select a city">
-            <!-- Populate this dynamically with existing cities -->
-        </select>
+  
+    <input list="City" id="Citylist"  placeholder="type here..." />
+    <datalist id="CityList">
+
+
+</datalist>
         <h2 style="margin-top: 50px;"> Add a city</h2>
         <br>
         <input type="text" id="newCity" placeholder="Enter new city name" style="width: 20%;">
