--- a/Project/province.html
+++ b/Project/province.html
@@ -13,9 +13,12 @@
 
 <form id="provinceForm">
     <h2>Select a Province</h2>
-    <select id="provinceSelect" placeholder="select a province">
-        <!-- Populate this dynamically with existing provinces -->
-    </select>
+  
+    <input list="Province " id="Province"  placeholder="type here..." />
+    <datalist id="provincelist">
+
+
+</datalist>
     <h2 style="margin-top: 50px;"> Add a province</h2>
     <br>
     <input type="text" id="newProvince" placeholder="Enter new province name" style="width: 20%;">
