--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -128,7 +128,12 @@
                             <input id="postal" name="create" type="text" placeholder="Ex: A1B2C3" required>
                         </div>
                     </div>
-                    <input id="btn" type="button" onclick="" value="Create">
+                   <div class="btn">
+                        <button onclick="GenerateSummary(CustomerTable)" >
+                            <i class="fa-solid fa-user-plus icon-large"></i>
+                                <h2>Create Customer</h2>
+                        </button>
+                    </div>
                 </fieldset>
             </form>
         </div>
