--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -108,7 +108,7 @@
                             </select>
                         </div>
                         <div>
-                            <a href="create_customer.html"><i class="fa-solid fa-plus"></i></a>
+                            <a href="province.html"><i class="fa-solid fa-plus"></i></a>
                             <label for="province"><b>Province:</b></label>
                             <select id="province" name="create" required>
                                 <option value="">Select a province...</option>
