--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -103,14 +103,14 @@
                             <hr>
                             <div class="col">
                                 <div>
-                                    <a href="index.html"><i class="fa-solid fa-plus"></i></a>
+                                    <a href="manufacturer.html"><i class="fa-solid fa-plus"></i></a>
                                     <label for="manufacturer"><b>Manufacturer:</b></label>
                                     <select id="manufacturer" name="create" required>
                                         <option value="">Select a manufacturer...</option>
                                     </select>
                                 </div>
                                 <div>
-                                    <a href="index.html"><i class="fa-solid fa-plus"></i></a>
+                                    <a href="type.html"><i class="fa-solid fa-plus"></i></a>
                                     <label for="type"><b>Type:</b></label>
                                     <select id="type" name="create" required>
                                         <option value="">Select a type...</option>
@@ -118,7 +118,7 @@
                                 </div>
 
                                 <div>
-                                    <a href="index.html"><i class="fa-solid fa-plus"></i></a>
+                                    <a href="color.html"><i class="fa-solid fa-plus"></i></a>
                                     <label for="color"><b>Color:</b></label>
                                     <select id="color" name="create" required>
                                         <option value="">Select a color...</option>
