--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -47,16 +47,10 @@
                         <a href="index.html" tabindex="-1"><s>Search repairs</s></a>
                     </div>
                 </li>
-                
-                <li>
-                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
-                </li>
 
-                <li>
-                    <div class="burger-menu">
-                        <button id="burger-btn" tabindex="15" accesskey="m"><i class="fa-solid fa-bars"></i></button>
-                    </div>
-                    <div id="burger-contents" class="burger-contents">
+                <li class="dropdown">
+                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Maintenance</button>
+                    <div class="dropdown-content">
                         <a href="city.html" tabindex="15">Manage cities</a>
                         <a href="province.html" tabindex="15">Manage provinces</a>
                         <a href="manufacturer.html" tabindex="15">Manage manufacturers</a>
@@ -64,14 +58,17 @@
                         <a href="color.html" tabindex="15">Manage colors</a>
                     </div>
                 </li>
+
+                <li>
+                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
+                </li>
             </ul>
         </nav>
-        <script src="JS/nav-burger.js"></script>
     </header>
 
     <main>
         <div class="main-form">
-            <form action="https://webdevbasics.net/scripts/demo.php" method="post">
+            <form>
                 <fieldset>
                     <legend>Customer Information</legend>
                     <div class="col">
@@ -101,18 +98,30 @@
                     <hr>
                     <div class="col">
                         <div>
-                            <a href="city.html"><i class="fa-solid fa-plus"></i></a>
                             <label for="city"><b>City:</b></label>
                             <select id="city" name="create" required>
                                 <option value="">Select a city...</option>
                             </select>
+                            <a href="city.html"><i class="fa-solid fa-plus"></i></a>
                         </div>
                         <div>
-                            <a href="province.html"><i class="fa-solid fa-plus"></i></a>
                             <label for="province"><b>Province:</b></label>
                             <select id="province" name="create" required>
                                 <option value="">Select a province...</option>
                             </select>
+                            <a href="province.html"><i class="fa-solid fa-plus"></i></a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div>
+                            <label for="type"><b>Type:</b></label>
+                            <select id="type" name="create" required>
+                                <option value="">Select a type...</option>
+                            </select>
+                            <a href="type.html"><i class="fa-solid fa-plus"></i></a>
+                        </div>
+                        <div>
+
                         </div>
                     </div>
                     <hr>
@@ -132,6 +141,16 @@
                             <span>Add Customer</span>
                         </button>
                     </div>
+                    <div class="btn btn-small">
+                        <button onclick="history.back()" formnovalidate>
+                            <span>Back</span>
+                        </button>
+                    </div>
+                    <div class="btn btn-small">
+                        <button type="reset">
+                            <span>Clear</span>
+                        </button>
+                    </div>
                 </fieldset>
             </form>
         </div>
@@ -143,8 +162,10 @@
         //Page specific code
         let cities = document.getElementById("city");
         let provinces = document.getElementById("province");
+        let types = document.getElementById("type");
         PopulateDropdown(cities, CityTable);
         PopulateDropdown(provinces, ProvinceTable);
+        PopulateDropdown(types, TypeTable);
     </script>
 </body>
 
