--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -48,15 +48,9 @@
                     </div>
                 </li>
 
-                <li>
-                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
-                </li>
-
-                <li>
-                    <div class="burger-menu">
-                        <button id="burger-btn" tabindex="15" accesskey="m"><i class="fa-solid fa-bars"></i></button>
-                    </div>
-                    <div id="burger-contents" class="burger-contents">
+                <li class="dropdown">
+                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Maintenance</button>
+                    <div class="dropdown-content">
                         <a href="city.html" tabindex="15">Manage cities</a>
                         <a href="province.html" tabindex="15">Manage provinces</a>
                         <a href="manufacturer.html" tabindex="15">Manage manufacturers</a>
@@ -64,80 +58,92 @@
                         <a href="color.html" tabindex="15">Manage colors</a>
                     </div>
                 </li>
+
+                <li>
+                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
+                </li>
             </ul>
         </nav>
-        <script src="JS/nav-burger.js"></script>
     </header>
 
-
-    <div id="form-wrapper">
-        <main>
-            <div class="main-form">
-                <form>
-                    <fieldset>
-                        <legend>Equipment Information</legend>
-                        <div class="grid">
-                            <div class="col">
-                                <div>
-                                    <label for="Name"><b>Name:</b></label>
-                                    <input id="Name" name="create" type="text" placeholder="Ex: TimeMaster" required>
-                                </div>
-
-                                <div>
-                                    <label for="Model"><b>Model:</b></label>
-                                    <input id="Model" name="create" type="text" placeholder="Ex: Kohler" required>
-                                </div>
-
-                                <div class="vin">
-                                    <label for="vin"><b>VIN:</b></label>
-                                    <input id="vin" name="create" type="number" placeholder="Ex: 76484443" required>
-                                </div>
+    <main>
+        <div class="main-form">
+            <form>
+                <fieldset>
+                    <legend>Equipment Information</legend>
+                    <div class="grid">
+                        <div class="col">
+                            <div>
+                                <label for="Name"><b>Name:</b></label>
+                                <input id="Name" name="create" type="text" placeholder="Ex: TimeMaster" required>
                             </div>
-                            <hr>
-                            <div class="col">
-                                <div class="txtDesc">
-                                    <label for="description"><b>Description:</b></label>
-                                    <textarea id="description"></textarea>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="col">
-                                <div>
-                                    <a href="manufacturer.html"><i class="fa-solid fa-plus"></i></a>
-                                    <label for="manufacturer"><b>Manufacturer:</b></label>
-                                    <select id="manufacturer" name="create" required>
-                                        <option value="">Select a manufacturer...</option>
-                                    </select>
-                                </div>
-                                <div>
-                                    <a href="type.html"><i class="fa-solid fa-plus"></i></a>
-                                    <label for="type"><b>Type:</b></label>
-                                    <select id="type" name="create" required>
-                                        <option value="">Select a type...</option>
-                                    </select>
-                                </div>
 
-                                <div>
-                                    <a href="color.html"><i class="fa-solid fa-plus"></i></a>
-                                    <label for="color"><b>Color:</b></label>
-                                    <select id="color" name="create" required>
-                                        <option value="">Select a color...</option>
-                                    </select>
-                                </div>
+                            <div>
+                                <label for="Model"><b>Model:</b></label>
+                                <input id="Model" name="create" type="text" placeholder="Ex: Kohler" required>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="vin">
+                                <label for="vin"><b>VIN:</b></label>
+                                <input id="vin" name="create" type="number" placeholder="Ex: 76484443" required>
                             </div>
                         </div>
                         <hr>
-                        <div class="btn">
-                            <button>
-                                <i class="fa-solid fa-gear icon-large"></i>
-                                <span>Create Equipment</span>
-                            </button>
+                        <div class="col">
+                            <div class="txtDesc">
+                                <label for="description"><b>Description:</b></label>
+                                <textarea id="description"></textarea>
+                            </div>
                         </div>
-                    </fieldset>
-                </form>
-            </div>
-        </main>
-    </div>
+                        <hr>
+                        <div class="col">
+                            <div>
+                                <label for="manufacturer"><b>Manufacturer:</b></label>
+                                <select id="manufacturer" name="create" required>
+                                    <option value="">Select a manufacturer...</option>
+                                </select>
+                                <a href="manufacturer.html"><i class="fa-solid fa-plus"></i></a>
+                            </div>
+                            <div>
+                                <label for="type"><b>Type:</b></label>
+                                <select id="type" name="create" required>
+                                    <option value="">Select a type...</option>
+                                </select>
+                                <a href="type.html"><i class="fa-solid fa-plus"></i></a>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div>
+                                <label for="color"><b>Color:</b></label>
+                                <select id="color" name="create" required>
+                                    <option value="">Select a color...</option>
+                                </select>
+                                <a href="color.html"><i class="fa-solid fa-plus"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="btn">
+                        <button>
+                            <i class="fa-solid fa-gear icon-large"></i>
+                            <span>Create Equipment</span>
+                        </button>
+                    </div>
+                    <div class="btn btn-small">
+                        <button onclick="history.back()" formnovalidate>
+                            <span>Back</span>
+                        </button>
+                    </div>
+                    <div class="btn btn-small">
+                        <button type="reset">
+                            <span>Clear</span>
+                        </button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </main>
     <footer>
         <h3> &copy; Webcrafters 2023</h3>
     </footer>
