--- a/Prototype-main/index.html
+++ b/Prototype-main/index.html
@@ -44,16 +44,10 @@
                         <a href="index.html" tabindex="-1"><s>Search repairs</s></a>
                     </div>
                 </li>
-                
-                <li>
-                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
-                </li>
 
-                <li>
-                    <div class="burger-menu">
-                        <button id="burger-btn" tabindex="15" accesskey="m"><i class="fa-solid fa-bars"></i></button>
-                    </div>
-                    <div id="burger-contents" class="burger-contents">
+                <li class="dropdown">
+                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Maintenance</button>
+                    <div class="dropdown-content">
                         <a href="city.html" tabindex="15">Manage cities</a>
                         <a href="province.html" tabindex="15">Manage provinces</a>
                         <a href="manufacturer.html" tabindex="15">Manage manufacturers</a>
@@ -61,9 +55,12 @@
                         <a href="color.html" tabindex="15">Manage colors</a>
                     </div>
                 </li>
+
+                <li>
+                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
+                </li>
             </ul>
         </nav>
-        <script src="JS/nav-burger.js"></script>
     </header>
     <main>
         <section class="homepage-sign-in">
