--- a/Prototype-main/province.html
+++ b/Prototype-main/province.html
@@ -48,16 +48,10 @@
                         <a href="index.html" tabindex="-1"><s>Search repairs</s></a>
                     </div>
                 </li>
-                
-                <li>
-                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
-                </li>
 
-                <li>
-                    <div class="burger-menu">
-                        <button id="burger-btn" tabindex="15" accesskey="m"><i class="fa-solid fa-bars"></i></button>
-                    </div>
-                    <div id="burger-contents" class="burger-contents">
+                <li class="dropdown">
+                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Maintenance</button>
+                    <div class="dropdown-content">
                         <a href="city.html" tabindex="15">Manage cities</a>
                         <a href="province.html" tabindex="15">Manage provinces</a>
                         <a href="manufacturer.html" tabindex="15">Manage manufacturers</a>
@@ -65,37 +59,44 @@
                         <a href="color.html" tabindex="15">Manage colors</a>
                     </div>
                 </li>
+
+                <li>
+                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
+                </li>
             </ul>
         </nav>
-        <script src="JS/nav-burger.js"></script>
     </header>
 
-
-    <div class="manage-search">
-        <h2>Select a province to edit</h2>
-        <input list="province" id="select" size="5" onchange="SelectForEdit(input, datalist, txt, btnAdd, btnUpdate)"
-            placeholder="Select a province...">
-        <datalist id="province">
-        </datalist>
-        <table id="tblSummary"></table>
-    </div>
-    <form id="form">
-        <div class="manage-update">
-            <div class="manage">
-                <h2>Update provinces</h2>
-                <br>
-                <input type="text" id="newprovince" placeholder="Enter province name...">
-                <br>
-                <button type="button" id="btnadd" onclick="AddDropdownOption(input, datalist, txt, btnAdd, btnUpdate)">
-                    Add
-                </button>
-                <button style="background-color: #6e6e6e;" type="button" id="btnedit"
-                    onclick="UpdateDropdown(input, datalist, txt, btnAdd, btnUpdate)" disabled>
-                    Update
-                </button>
-            </div>
+    <main>
+        <div class="manage-search">
+            <h2>Select a province to edit</h2>
+            <input list="province" id="select" size="5"
+                onchange="SelectForEdit(input, datalist, txt, btnAdd, btnUpdate)" placeholder="Select a province...">
+            <datalist id="province">
+            </datalist>
         </div>
-    </form>
+        <form id="form">
+            <div class="manage-update">
+                <div class="manage">
+                    <h2>Update provinces</h2>
+                    <br>
+                    <input type="text" id="newprovince" placeholder="Enter province name...">
+                    <br>
+                    <button type="button" id="btnadd"
+                        onclick="AddDropdownOption(input, datalist, txt, btnAdd, btnUpdate)">
+                        Add
+                    </button>
+                    <button style="background-color: #6e6e6e;" type="button" id="btnedit"
+                        onclick="UpdateDropdown(input, datalist, txt, btnAdd, btnUpdate)" disabled>
+                        Update
+                    </button>
+                </div>
+            </div>
+        </form>
+    </main>
+    <footer>
+        <h3> &copy; Webcrafters 2023</h3>
+    </footer>
     <script>
         let input = document.getElementById("select");
         let datalist = document.getElementById("province");
@@ -103,7 +104,6 @@
         let btnAdd = document.getElementById("btnadd");
         let btnUpdate = document.getElementById("btnedit");
         PopulateDropdown(datalist, ProvinceTable);
-        GenerateSummaryLUT(ProvinceTable);
     </script>
 </body>
 
