--- a/Prototype-main/index.html
+++ b/Prototype-main/index.html
@@ -15,79 +15,34 @@
 </head>
 
 <body>
-    <header>
-        <a class="home-link" href="index.html" tabindex="1">
-            <img src="images/FixIt.png" alt="FixIt Logo" id="fixlogo">
-        </a>
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="2"><i class="nav-arrow"></i>Customers</button>
-                    <div class="dropdown-content">
-                        <a href="create_customer.html" tabindex="3">Add new customer</a>
-                        <a href="view_customer.html" tabindex="5">Search customers</a>
-                    </div>
-                </li>
-
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="6"><i class="nav-arrow"></i>Equipment</button>
-                    <div class="dropdown-content">
-                        <a href="create_equipment.html" tabindex="7">Add new Equipment</a>
-                        <a href="view_equipment.html" tabindex="9">Search Equipment</a>
-                    </div>
-                </li>
-
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Repairs</button>
-                    <div class="dropdown-content">
-                        <a href="index.html" tabindex="-1"><s>Add new repair</s></a>
-                        <a href="index.html" tabindex="-1"><s>Search repairs</s></a>
-                    </div>
-                </li>
-
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Maintenance</button>
-                    <div class="dropdown-content">
-                        <a href="city.html" tabindex="15">Manage cities</a>
-                        <a href="province.html" tabindex="15">Manage provinces</a>
-                        <a href="manufacturer.html" tabindex="15">Manage manufacturers</a>
-                        <a href="type.html" tabindex="15">Manage engine types</a>
-                        <a href="color.html" tabindex="15">Manage colors</a>
-                    </div>
-                </li>
-
-                <li>
-                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
-                </li>
-            </ul>
-        </nav>
+    <header id="header">
     </header>
     <main>
         <section class="homepage-sign-in">
-            <h1>Emma's small engines</h1>
-            <p><b>Please Sign in to continue</b></p>
+            <h1>Emma's Small Engines</h1>
+            <p><b>Please sign in to continue</b></p>
             <a class="sign-in-button" href="sign-in.html" tabindex="16">Sign In</a>
         </section>
 
         <section class="third-section">
             <div>
-                <a class="third-section-icon" href="create_customer.html" tabindex="17">
-                    <i class="fa-solid fa-user-plus icon-large"></i>
-                    <h2>CUSTOMER</h2>
+                <a class="third-section-icon" href="view_customer.html" tabindex="17">
+                    <i class="fa-solid fa-user icon-large"></i>
+                    <h2>CUSTOMERS</h2>
                 </a>
             </div>
 
-            <div>
-                <a class="third-section-icon" href="create_equipment.html" tabindex="18">
+            <!-- <div>
+                <a class="third-section-icon" href="view_equipment.html" tabindex="18">
                     <i class="fa-solid fa-gear second-icon-large"></i>
                     <h2>EQUIPMENT</h2>
                 </a>
-            </div>
+            </div> -->
 
             <div>
-                <a class="third-section-icon" tabindex="-1">
+                <a class="third-section-icon" href="view_repairs.html" tabindex="-1">
                     <i class="fa-solid fa-screwdriver-wrench second-icon-large"></i>
-                    <h2> &ThickSpace; <s>REPAIRS</s> &ThickSpace;</h2>
+                    <h2> &ThickSpace; REPAIRS &ThickSpace;</h2>
                 </a>
             </div>
         </section>
@@ -95,6 +50,7 @@
     <footer>
         <h3> &copy; Webcrafters 2023</h3>
     </footer>
+    <script src="JS/header-template.js"></script>
 </body>
 
 </html>
