--- a/Prototype-main/view_customer.html
+++ b/Prototype-main/view_customer.html
@@ -18,168 +18,23 @@
 </head>
 
 <body>
-    <header>
-        <a class="home-link" href="index.html" tabindex="1">
-            <img src="images/FixIt.png" alt="FixIt Logo" id="fixlogo">
-        </a>
-        <nav>
-            <ul>
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="2"><i class="nav-arrow"></i>Customers</button>
-                    <div class="dropdown-content">
-                        <a href="create_customer.html" tabindex="3">Add new customer</a>
-                        <a href="view_customer.html" tabindex="5">Search customers</a>
-                    </div>
-                </li>
-
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="6"><i class="nav-arrow"></i>Equipment</button>
-                    <div class="dropdown-content">
-                        <a href="create_equipment.html" tabindex="7">Add new Equipment</a>
-                        <a href="view_equipment.html" tabindex="9">Search Equipment</a>
-                    </div>
-                </li>
-
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Repairs</button>
-                    <div class="dropdown-content">
-                        <a href="index.html" tabindex="-1"><s>Add new repair</s></a>
-                        <a href="index.html" tabindex="-1"><s>Search repairs</s></a>
-                    </div>
-                </li>
-
-                <li class="dropdown">
-                    <button class="dropdownbtn" tabindex="-1"><i class="nav-arrow"></i>Maintenance</button>
-                    <div class="dropdown-content">
-                        <a href="city.html" tabindex="15">Manage cities</a>
-                        <a href="province.html" tabindex="15">Manage provinces</a>
-                        <a href="manufacturer.html" tabindex="15">Manage manufacturers</a>
-                        <a href="type.html" tabindex="15">Manage engine types</a>
-                        <a href="color.html" tabindex="15">Manage colors</a>
-                    </div>
-                </li>
-
-                <li>
-                    <a href="sign-in.html" tabindex="15"><i class="fa-solid fa-user"></i></a>
-                </li>
-            </ul>
-        </nav>
+    <header id="header">
     </header>
-
-
     <main>
+        <h1>Add search function</h1>
         <div class="btn">
-            <button onclick="GenerateSummary(CustomerTable)">
+            <button onclick="GenerateSummary(JoinCustomer(), false, false)">
                 <span>View customers</span>
             </button>
         </div>
         <table id="tblSummary">
         </table>
-        <div class="main-form" id="form">
-            <form>
-                <fieldset>
-                    <legend>Customer Information</legend>
-                    <div class="col">
-                        <div>
-                            <label for="fName"><b>First Name:</b></label>
-                            <input id="fName" autocomplete="on" name="create" type="text" placeholder="Ex: John"
-                                required>
-                        </div>
 
-                        <div>
-                            <label for="lName"><b>Last Name:</b></label>
-                            <input id="lName" autocomplete="on" name="create" type="text" placeholder="Ex: Doe"
-                                required>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="col">
-                        <div>
-                            <label for="email"><b>Email:</b></label>
-                            <input id="email" autocomplete="on" name="create" type="email"
-                                placeholder="Ex: JohnDoe123@gmail.com" required>
-                        </div>
-
-                        <div>
-                            <label for="address"><b>Address:</b></label>
-                            <input id="address" autocomplete="on" name="create" type="text"
-                                placeholder="Ex: 123 Fake Street" required>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="col">
-                        <div>
-                            <label for="city"><b>City:</b></label>
-                            <select id="city" name="create" required>
-                                <option value="">Select a city...</option>
-                            </select>
-                            <a href="city.html"><i class="fa-solid fa-plus"></i></a>
-                        </div>
-                        <div>
-                            <label for="province"><b>Province:</b></label>
-                            <select id="province" name="create" required>
-                                <option value="">Select a province...</option>
-                            </select>
-                            <a href="province.html"><i class="fa-solid fa-plus"></i></a>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div>
-                            <label for="type"><b>Type:</b></label>
-                            <select id="type" name="create" required>
-                                <option value="">Select a type...</option>
-                            </select>
-                            <a href="type.html"><i class="fa-solid fa-plus"></i></a>
-                        </div>
-                        <div>
-
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="col">
-                        <div>
-                            <label for="phone"><b>Phone Number:</b></label>
-                            <input id="phone" autocomplete="on" name="create" type="tel" placeholder="Ex: 1234567890"
-                                required>
-                        </div>
-                        <div>
-                            <label for="postal"><b>Postal Code:</b></label>
-                            <input id="postal" autocomplete="on" name="create" type="text" placeholder="Ex: A1B2C3"
-                                required>
-                        </div>
-                    </div>
-                    <div class="btn">
-                        <button>
-                            <i class="fa-solid fa-user-plus icon-large"></i>
-                            <span>Update Customer</span>
-                        </button>
-                    </div>
-                    <div class="btn btn-small">
-                        <button onclick="history.back()" formnovalidate>
-                            <span>Back</span>
-                        </button>
-                    </div>
-                    <div class="btn btn-small">
-                        <button type="reset">
-                            <span>Clear</span>
-                        </button>
-                    </div>
-                </fieldset>
-            </form>
-        </div>
     </main>
     <footer>
         <h3> <i class="fa-regular fa-copyright"></i> Webcrafters 2023</h3>
     </footer>
-    <script>
-        //Page specific code
-        let cities = document.getElementById("city");
-        let provinces = document.getElementById("province");
-        let types = document.getElementById("type");
-        PopulateDropdown(cities, CityTable);
-        PopulateDropdown(provinces, ProvinceTable);
-        PopulateDropdown(types, TypeTable);
-    </script>
+    <script src="JS/header-template.js"> </script>
 </body>
 
 </html>
