--- a/Prototype-main/view_repairs.html
+++ b/Prototype-main/view_repairs.html
@@ -11,26 +11,27 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
-    <title>Web Crafters</title>
+    <title>Customer Search</title>
+
+    <script src="JS/database.js"></script>
+    <script src="JS/cru-code.js"></script>
 </head>
 
 <body>
     <header id="header">
     </header>
     <main>
-        <div class="login-container">
-            <h2>Sales Rep Login</h2>
-            <form>
-                <input type="text" placeholder="Username" id="username" required>
-                <input type="password" placeholder="Password" id="password" required>
-                <a href="index.html">Sign in</a>
-            </form>
-        </div>
+        <table id="tblSummary">
+        </table>
+
     </main>
     <footer>
-        <h3> &copy; Webcrafters 2023</h3>
+        <h3> <i class="fa-regular fa-copyright"></i> Webcrafters 2023</h3>
     </footer>
     <script src="JS/header-template.js"></script>
+    <script>
+        GenerateSummary(RepairsTable, false, true)
+    </script>
 </body>
 
 </html>
