Site before repair details added.
this version of the site has mostly been finalized, with the exception of the details page, and the validation of some of the pages.

But it should have:
- a functional help button
- a search feature
- repairs list page
-repairs request page

Please try downloading this tomorrow or Wednesday to see if it's the right version and that everything works properly.
<3

--- a/Prototype-main/color.html
+++ b/Prototype-main/color.html
@@ -61,6 +61,14 @@
         PopulateDropdown(datalist, ColourTable);
     </script>
     <script src="JS/header-template.js"></script>
+    <script src="JS/context-help.js"></script>
+    <script>
+        let value = "color";
+        let plural = "colors";
+        GenerateContextHelp(["<p>This is a maintenance page for storing repetitive information.</p>",
+                             `<p>To add a ${value} to the database, type into the 'Update ${plural}' textbox and press the 'Add' button.</p>`,
+                             `<p>To update a ${value} in the database, search for it using the 'Select a ${value}' textbox and press the 'Update' button.</p>`])
+    </script>
 </body>
 
 </html>
