--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -25,8 +25,8 @@
         <div class="main-form">
             <form>
                 <fieldset>
-                    <legend>Equipment Information</legend>
-                    <div class="grid">
+                    <legend>[Customer Name]:Equipment Information</legend>
+                    <div>
                         <div class="col">
                             <div>
                                 <label for="Name"><b>Name:</b></label>
@@ -112,6 +112,15 @@
         PopulateDropdown(colors, ColourTable);
     </script>
     <script src="JS/header-template.js"></script>
+    <script src="JS/context-help.js"></script>
+    <script>
+        GenerateContextHelp(["<p>This page allows you to add equipment to the system.</p>",
+            "<p>Filling in the form and pressing the 'Add Equipment' button will add equipment to the system.</p>",
+            "<p>Pressing the 'Clear' button will reset the form to before any information was entered.</p>",
+            "<p>Pressing the 'Back' button will take you back to the previous page.</p>",
+            "<p>Pressing any of the 'plus' icons next to the dropdowns will take you to the maintenance page for that dropdown list.</p>",
+        ])
+    </script>
 </body>
 
 </html>
