--- a/Prototype-main/view_repairs.html
+++ b/Prototype-main/view_repairs.html
@@ -23,7 +23,6 @@
     <main>
         <table id="tblSummary">
         </table>
-
     </main>
     <footer>
         <h3> <i class="fa-regular fa-copyright"></i> Webcrafters 2023</h3>
@@ -32,6 +31,12 @@
     <script>
         GenerateSummary(RepairsTable, false, true)
     </script>
+        <script src="JS/context-help.js"></script>
+        <script>
+            GenerateContextHelp(["<p>The repairs list page shows all repairs in reverse chronological order.</p>",
+                "<p>Pressing the 'select' button will take you to the repair details page for that </p>",
+            ])
+        </script>
 </body>
 
 </html>
