--- a/Prototype-main/view_customer.html
+++ b/Prototype-main/view_customer.html
@@ -21,20 +21,28 @@
     <header id="header">
     </header>
     <main>
-        <h1>Add search function</h1>
-        <div class="btn">
-            <button onclick="GenerateSummary(JoinCustomer(), false, false)">
-                <span>View customers</span>
-            </button>
+        <h1 class="sc">Search Customer</h1>
+        <div class="search-container">
+            <input id="search-input" type="text" list="customer-list" required>
+            <label id="placeholder-label" for="search-input">Search for a customer Ex: Emmanuel James</label>
+            <datalist id="customer-list"></datalist>
+            <button id="search-button" class="Sbtn">Search</button>
         </div>
-        <table id="tblSummary">
-        </table>
-
+        <table id="tblSummary"></table>
     </main>
     <footer>
         <h3> <i class="fa-regular fa-copyright"></i> Webcrafters 2023</h3>
     </footer>
     <script src="JS/header-template.js"> </script>
+    <script src="JS/context-help.js"></script>
+    <script>
+        GenerateContextHelp(["<p>The customer search page lets you search for a customer and edit their information.</p>",
+            "<p>type into the search bar and click the 'search' button to see the results.</p>",
+            "<p>After searching, press the 'edit' button to edit that customer's information.</p>",
+            "<p>After searching, press the 'equipment' button to edit that customer's equipment.</p>",
+        ])
+    </script>
+    <script src="JS/search-customers.js"></script>
 </body>
 
 </html>
