--- a/Prototype-main/view_equipment.html
+++ b/Prototype-main/view_equipment.html
@@ -22,21 +22,28 @@
     </header>
 
     <main>
-        <h1>Add search function</h1>
-        <div class="btn">
-            <button onclick="GenerateSummary(JoinEquipment(), true, false)">
-                <span>View Equipment</span>
-            </button>
+
+        <h1 class="sc">Search Equipment</h1>
+        <div class="search-container">
+            <input id="search-input" type="text" list="equipment" required>
+            <label id="placeholder-label" for="search-input">Search for equipment Ex: Kohler Engine</label>
+            <datalist id="equipment-list"></datalist>
+            <button id="search-button" class="Sbtn">Search</button>
         </div>
-        <table id="tblSummary">
-        </table>
-
-
+        <table id="tblSummary"></table>
     </main>
     <footer>
         <h3> <i class="fa-regular fa-copyright"></i> Webcrafters 2023</h3>
     </footer>
     <script src="JS/header-template.js"></script>
+    <script src="JS/context-help.js"></script>
+    <script>
+        GenerateContextHelp(["<p>The equipment search page lets you search for a customer's equipment and edit its information.</p>",
+            "<p>type into the search bar and click the 'search' button to see the results.</p>",
+            "<p>After searching, press the 'edit' button to edit that customer's equipment information.</p>"
+        ])
+    </script>
+    <script src="JS/search-equipment.js"></script>
 </body>
 
 </html>
